# Work_Order_PDF_Splitter

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  WEB_README.md  Work_Order_PDF_Splitter.py  Work_Order_PDF_Splitter_V1.py  app.py  bundle_pages.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/work_order_splitter/: __init__.py  core.py  gui.py
src/work_order_splitter/cli/: __init__.py  __main__.py
src/work_order_splitter/web/: __init__.py  app.py
static/: styles.css
templates/: index.html
tests/: conftest.py  test_core.py  test_web.py
